--- a/package.json
+++ b/package.json
@@ -10,19 +10,20 @@
   "dependencies": {
     "axios": "^0.18.0",
     "babel-polyfill": "^6.26.0",
-    "element-ui": "^2.11.0",
-    "mavon-editor": "^2.6.17",
-    "vue": "^2.6.10",
+    "element-ui": "^2.15.1",
+    "mavon-editor": "^2.9.1",
+    "vue": "^2.6.12",
     "vue-cropperjs": "^3.0.0",
-    "vue-i18n": "^8.10.0",
+    "vue-i18n": "^8.24.4",
     "vue-quill-editor": "^3.0.6",
-    "vue-router": "^3.0.3",
+    "vue-router": "^3.5.1",
     "vue-schart": "^2.0.0",
-    "vuedraggable": "^2.17.0"
+    "vuedraggable": "^2.24.3",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.9.0",
     "@vue/cli-service": "^3.9.0",
-    "vue-template-compiler": "^2.6.10"
+    "vue-template-compiler": "^2.6.12"
   }
 }
